# peridash

./: .env.template  .gitignore  .gitlab-ci.yml  ;  README.md  docker-compose.yml  start.py  test.yaml  tmp_config.yaml
.github/: dependabot.yml  deploy-cd.yaml  general-ci.yaml
.github/workflows/: backend-ci.yml  deploy-cd.yaml  deploy-ci.yaml  deploy_supabase.yaml  general-ci.yaml
backend/: .flake8  Dockerfile  entrypoint.sh  manage.py  mypy.ini  pyproject.toml
backend/caltodo/: apps.py
backend/core/: gen_utils.py
backend/core/migrations/: 0001_initial.py  0002_delete_user.py
backend/nginx/: Dockerfile  entrypoint.sh  nginx.conf
backend/peridash/: gen_utils.py  settings.py  urls.py
backend/ticker/: api_utils.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/ticker/migrations/: 0001_initial.py  0002_initial.py  0004_alter_symbol_id.py  0005_alter_symbol_id.py  0007_alter_ticker_id_alter_tickersettings_id.py  0008_alter_ticker_symbol.py
backend/ticker/tests/: test_ticker_access.py  test_ticker_api.py  test_ticker_model.py
backend/user/: models.py  serializers.py  views.py
backend/user/migrations/: 0001_initial.py
backend/user/tests/: test_user_auth.py
db/: Dockerfile
db/src/: schema.ts
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  entrypoint.sh  index.html  jest.config.js  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: error-page.jsx  main.jsx  routes.jsx
frontend/src/components/: RandomNumberGenerator.js
frontend/src/pages/: _app.jsx  _document.js  _document.jsx  index.js  index.jsx  login.js  login.jsx  root.jsx  settings.jsx  tests.jsx
frontend/src/redux/: sagas.js  store.js  tickerSlice.js  userSlice.js
frontend/src/routes/: Dashboard.jsx  Settings.jsx  about.jsx  contact.jsx  root.jsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.js  auth.js  colors.js
kubernetes/: backend.yaml  config-maps-template.yaml  db.yaml  db.yml  fronted.yaml  memcached.yaml  nginx.yaml
kubernetes/base/: backend.yaml  ci-service-account.yaml  db.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  memcached.yaml  nginx.yaml  rollout_ci_role.yaml
kubernetes/configs/: acme-issuer-prod.yaml  config-maps-template copy.yaml  config-maps-template.yaml
kubernetes/deploy_commands/: Dockerfile  build_upload.sh  deploy.py  get_token.sh  preview_kustomization.sh  rollout_services.sh
kubernetes/dev/: .env.template  kustomization.yaml
kubernetes/kustomizations/prod/: .env.template  kustomization.yaml
kubernetes/manifestos/: backend.yaml  fronted.yaml  peridash-namespace.yaml
kubernetes/manifests/: nginx.yaml
nginx/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template
old_backend/: .coveragerc  Dockerfile  manage.py  pyproject.toml
old_backend/peridash/: asgi.py  urls.py  wsgi.py
old_backend/ticker/: api_utils.py  apps.py  forms.py  models.py  signals.py
old_backend/ticker/migrations/: 0001_initial.py  0002_initial.py  0003_remove_symbol_is_trending_remove_symbol_name_and_more.py  0004_alter_symbol_id.py  0005_alter_symbol_id.py  0006_alter_tickersettings_user.py  0008_alter_ticker_symbol.py  0009_ticker_buy_ticker_gain_ticker_loss.py
old_backend/user/: models.py  urls.py
old_frontend/: tailwind.config.js
old_frontend/src/pages/: _app.jsx  index.jsx  settings.jsx
supabase/: config.toml
supabase/functions/: .env.template  deno.json  import_map.json
supabase/migrations/: 0000_luxuriant_maestro.sql  0001_sturdy_phalanx.sql  0002_heavy_roulette.sql  0003_chunky_ulik.sql  0004_first_enchantress.sql  0005_old_young_avengers.sql  0006_talented_dragon_lord.sql  0007_vengeful_kat_farrell.sql  0008_safe_tyger_tiger.sql  0009_mature_karen_page.sql  0010_overrated_archangel.sql  0011_fat_wallop.sql  0012_breezy_silver_centurion.sql
(+76 files in other folders)
