[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "albertoa", email = "aabarzua@palvi.cl"},
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.6",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}


[tool.isort]
profile = "black"

[tool.black]
line-length = 90
[tool.pdm.scripts]
isort = "isort ./blog ./app"
black = "black ./blog ./app"
lint = "flake8 ./blog ./app"
format = {composite = ["isort", "black"]}
fixtures = "pdm run python manage.py loaddata fixtures/*.jsonpdm run py"
test = "pdm run python manage.py test --pattern=\"test_*.py\""
makemigrations = "pdm run python manage.py makemigrations --noinput"
migrate = "pdm run python manage.py migrate --noinput"
mm = {composite = ["makemigrations", "migrate"]}
