[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "albertoa", email = "aabarzua@palvi.cl"},
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.6",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pandas>=2.0.1",
    "twelvedata>=1.2.11",
    "setuptools>=67.7.2",
    "pymemcache>=4.0.0",
    "flake8-print>=5.0.0",
    "django-cors-headers>=4.0.0",
    "coverage>=7.2.6",
    "gunicorn>=20.1.0",
    "mypy>=1.4.1",
    "flake8-annotations>=3.0.1",
    "pandas-stubs>=2.0.2.230605",
    "types-requests>=2.31.0.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}


[tool.isort]
profile = "black"

[tool.black]
line-length = 110




[tool.pdm.scripts]
isort = "isort . --skip .venv"
black = "black . --exclude .venv"
pure_lint = "flake8 ."
type_check = "mypy ."
lint = {composite = ["pure_lint", "type_check"]}
format = {composite = ["isort", "black"]}
flint = {composite = ["format", "pure_lint"]}
fixtures = "pdm run python manage.py loaddata fixtures/*.jsonpdm run py"
test = "pdm run python manage.py test --pattern=\"test_*.py\""
coverage = "coverage run --source='.' manage.py test --pattern=\"test_*.py\""
report = "coverage report"
html_report = "coverage html --directory=htmlcov"
makemigrations = "pdm run python manage.py makemigrations --noinput"
migrate = "pdm run python manage.py migrate --noinput"
mm = {composite = ["makemigrations", "migrate"]}
test_full = {composite = ["coverage", "report", "html_report"]}
